# rosneuro_smr_processing

./: CMakeLists.txt  README.md  features.csv  out_features.csv  out_rawprob.csv  package.xml  rawprobs.csv
cfg/: ringbuffer.yaml
cfg/16ch/: gaussianCfg.yaml  hmmCfg.yaml  laplacian.yaml
cfg/32ch/: gaussianCfg.yaml  laplacian.yaml  riemannCfg.yaml
include/rosneuro_smr_processing/: Smr.hpp
launch/: pipelineCalibrationSmr.launch  pipelineControlSmr.launch  pipelineControlSmrHmm.launch  pipelineEvaluationSmr.launch  smr.launch
src/: smr.cpp
